--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -918,7 +918,7 @@
     <string name="bdba"> Number </string>
     <string name="bdc"> ڄمڻ جي تاريخ </string>
     <string name="bdd"> وفات جي تاريخ </string>
-    <string name="bd03"> زندہ پیدائش </string>
+    <string name="bd03"> زندہ پيدائش </string>
     <string name="bd04"> پيدائش کان 7 ڏينهن تائين </string>
     <string name="bd05"> 8 ڏينهن کان 28 ڏينهن تائين </string>
     <string name="bd06">  29 ڏينهن کان هڪ سال تائين  </string>
