Changes of All Activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,7 +261,6 @@
     <string name="kac2420"> ڪمپيوٽر </string>
 
 
-
     <string name="kbheading">سڀ کان ننڍي ٻار جي باري ۾ معلومات </string>
     <string name="kbaheading"> ٻار پيدا ڪرڻ جي صلاحيت رکندڙ عورتن ۽ آخري حمل جي باري ۾ معلومات  </string>
     <string name="kba01">ٻار پيدا ڪرڻ جي صلاحيت رکندڙ عورت جو نالو </string>
@@ -493,35 +492,30 @@
     <string name="kbcc02g"> ٻار جو لوڏڻ سان چرپچ ڪرڻ يا بلڪل به نه هلڻ </string>
     <string name="kbcc02h"> ساڻو ٿي وڃڻ </string>
     <string name="kd"> Module D: LOW BIRTH WEIGHT BABY </string>
-    <string name="kc4heading"> ڊگھي عرصي لاءِ ٻار کي ماءُ جي ڇاتي سان لڳائڻ </string>
-    <string name="kc401"> ڪمزور يا گھٽ وزن واري ٻار کي ڪيئين گرم رکندا آهيو؟ </string>
-    <string name="kc401a"> ڪپھ يا ڪمبل ۾ ويڙهيندا آهيو </string>
-    <string name="kc401b"> ٻار کي پنهنجي ويجھو رکندا آهيو </string>
-    <string name="kc401c"> ڇاتي سان لڳائيندا آهيو </string>
-    <string name="kc401d"> گرم ڪپڙا پهرائيندا آهيو </string>
-    <string name="kc401e"> اس ۾ رکندا آهيو </string>
-    <string name="kc402"> ڇا توهان ڪڏهن ٻار کي ويم کان پوءِ ڇاتيءَ سان لڳائڻ جي باري ۾ ٻڌو آهي؟ </string>
-    <string name="kc403"> جيڪڏهن ها ته ڪنهن توهان کي ڇاتيءَ سان لڳائڻ جي باري ۾ ٻڌايو هو؟ </string>
-    <string name="kc403a"> ڊاڪٽر </string>
-    <string name="kc403b"> ليڊي هيلٿ وزيٽر </string>
-    <string name="kc403c"> ليڊي هيلٿ ورڪر </string>
-    <string name="kc403d"> نرس </string>
-    <string name="kc403e"> مڊوائيف </string>
-    <string name="kc403f"> ڪمنيونٽي هيلٿ ورڪر </string>
-    <string name="kc403g"> ڪميونٽي موباليزشن ورڪر </string>
-    <string name="kc403h"> مائيٽ </string>
-    <string name="kc403i"> دوست </string>
-    <string name="kc404"> ڇا توهان ڪڏهن پنهنجي گھٽ وزن واري ٻار کي ڇاتيءَ سان لڳايو آهي؟ </string>
-    <string name="kc405"> ڪيتري وقت توهان پنهنجي ٻار کي ڇاتي سان لڳائي سگھو ٿا</string>
-    <string name="kc406"> ڇا ڇاتيءَ سان لڳائڻ ٻار کي کير پيارڻ ۾ مدد ڪري ٿو؟ </string>
-    <string name="kc407"> توهان جي خيال مطابق ڇاتيءَ سان لڳائڻ ڪيئن مدد ڪري ٿو؟ </string>
-    <string name="kc407a">ٿڌ کان بچائڻ لاءِ </string>
-    <string name="kc407b"> ٻارن جو وزن وڌائي </string>
-    <string name="kc407c"> ماءُ کي بيماري کان بچائي ٿو </string>
-    <string name="kc407d"> نئي ڄاول ٻار کي بيماري کان بچائي ٿو </string>
-    <string name="kc407e"> ٿڃ کي يقيني بڻائي ٿو </string>
-    <string name="kc407f"> ماءُ جي رشتي کي مضبوط بڻائي ٿو </string>
-    <string name="kc408"> جيڪڏهن مستقبل ۾ توهان جو ٻار گھٽ وزن وارو يا ننڍو پيدا ٿئي ته ڇا توهان ٻار کي ڇاتي سان لڳائيندا؟ </string>
+    <string name="kbdheading">ٻار جي ڄمڻ کان پوءِ جي سار سنڀال  (گزريل حمل) </string>
+    <string name="kbdaheading">ڇاتي جو ڇاتي سان ملائڻ (بنا ڪپڙن جي) </string>
+    <string name="kbd01">ڇا توهان ٻار کي تيل مالش ڪندا آهيو؟ </string>
+    <string name="kbdainstruction"> هدايتون:  ڇاتيءَ جو ڇاتيءَ سان بنا ڪپڙن جي ملائڻ واريون تصويرون ڏيکارڻ کان پوءِ سوال پڇڻ شروع ڪيو   </string>
+    <string name="kbda01"> ڪمزور يا گھٽ وزن واري ٻار کي ڪيئين گرم رکندا آهيو؟ </string>
+    <string name="kbda01a"> ڪپھ يا ڪمبل ۾ ويڙهيندا آهيو </string>
+    <string name="kbda01b"> گرم ڪپڙا پهرائيندا آهيو </string>
+    <string name="kbda01c"> اس ۾ رکندا آهيو </string>
+    <string name="kbda02"> ڇا ڪڏهن توهان گهڻي ديرتائين پنهنجي ٻار کي گرم رکڻ ءِ  کير پيارڻ لاءِ بنا ڪپڙن جي ڇاتي سان لڳايو هيو؟</string>
+    <string name="kbda02sub1">ٻار کي گرم رکڻ لاءِ</string>
+    <string name="kbda02sub2">ٻار کي کير پيارڻ لاءِ</string>
+    <string name="kbda03">روزانو توهان ڪيتري وقت لاءِ  پنهنجي ٻار کي  گهڻي دير تاءين  بنا ڪپڙن جي ڇاتي سان  لڳايو  هيو؟  </string>
+    <string name="kbda03a">ڪيترا ڪلاڪ </string>
+    <string name="kbda04">توهان ڪيتري ڏينهن لاءِ  پنهنجي ٻار کي  گهڻي دير تاءين  بنا ڪپڙن جي ڇاتي سان  لڳايوهيو؟  </string>
+    <string name="kbda04a"> ڏينهن ڪيترا </string>
+    <string name="kbda05"> ڇا ڇاتيءَ سان لڳائڻ ٻار کي کير پيارڻ ۾ مدد ڪري ٿو؟ </string>
+    <string name="kbda07"> توهان جي خيال مطابق ڇاتيءَ سان لڳائڻ ڪيئن مدد ڪري ٿو؟ </string>
+    <string name="kbda07a">ٿڌ کان بچائڻ لاءِ </string>
+    <string name="kbda07b"> ٻارن جو وزن وڌائي </string>
+    <string name="kbda07c"> ماءُ کي بيماري کان بچائي ٿو </string>
+    <string name="kbda07d"> نئي ڄاول ٻار کي بيماري کان بچائي ٿو </string>
+    <string name="kbda07e"> ٿڃ کي يقيني بڻائي ٿو </string>
+    <string name="kbda07f"> ماءُ جي رشتي کي مضبوط بڻائي ٿو </string>
+    <string name="kbda06"> ڇا توهان کي بنا ڪپڙن جي ٻار کي ماءُ جي ڇاتي سان لڳائڻ جا فائيدا خبر آهن؟ </string>
     <string name="kc5heading"> چمڙيءَ جي مالش / آڍڻ جي معلومات </string>
     <string name="kc501"> ڇا توهان ٻار کي تيل ماليش ڪندا آهيو؟ </string>
     <string name="kc502">ڪهڙو تيل استعمال ڪندا آهيو؟ </string>
@@ -536,85 +530,114 @@
     <string name="kc505a">ڪيستائين هنيو	ڏينهن _____</string>
     <string name="kc505b"> اڄ ڏينهن تائين جاري آهي</string>
 
-    <string name="kdheading1"> هڪ سال کان گھٽ ٻارن ۾ کير پيارڻ جو عمل </string>
-    <string name="kd001"> توهان جي آخري ٻار جي عمر ڇا آهي؟ </string>
-    <string name="kd1heading"> کير پيارڻ جي شروعات </string>
-    <string name="kd102"> روزانو ڪيترا ڀيرا توهان ٻار کي ٿڄ پياريندا آهيو؟ </string>
-    <string name="number"> نمبر </string>
-    <string name="kd102b"> ضرورت مطابق</string>
-    <string name="kd101"> ڇا توهان جو ٻار اڃا تائين ٿڄ پئي ٿو؟ </string>
-    <string name="kd103"> ڇا توهان ٻار کي پنهنجي ٿڄ ڇاتيءَ سان پياريندا آهيو يا ڪڍي چمچي يا بوتل ۾ پياريندا آهيو؟ </string>
-    <string name="kd103a"> ڇاتيءَ سان </string>
-    <string name="kd103b"> ڪپ ۽ چمچي سان </string>
-    <string name="kd103c"> بوتل سان </string>
-    <string name="kd103d">سوراخن وارو ڪپ </string>
-    <string name="kd104">
-    جيڪڏهن ٻيو طريقو اختيار ڪندا آهيو ته ڇو ڪندا آهيو؟ </string>
-    <string name="kd104a"> ٻار گھٽ وزن جو هيو </string>
-    <string name="kd104b"> ٻار ننڍو هيو </string>
-    <string name="kd104c"> ٻار بيمار هيو </string>
-    <string name="kd104d"> ٻار ٿڃ وٺڻ جي قابل نه هيو </string>
-    <string name="kd104e"> ٻار آڪسيجن تي هو </string>
-    <string name="kd104f"> ڊاڪٽر اجازت نه ڏني </string>
-    <string name="kd104g"> آئو بيمار هئيس </string>
-    <string name="kd104h"> چپ وڍيل تارون ڪٽيل </string>
 
-    <string name="kd2heading"> صرف ماءَ جو کير </string>
-    <string name="kd201"> ڪيترا مهينا توهان پنهنجي ٻار کي صرف پنهنجي ٿڄ پياري؟ صرف ٿڄ معنيٰ پنهنجو کير (دوائون سميت) </string>
-    <string name="kd201a"> ڏينهن </string>
-    <string name="kd201b"> مهينا </string>
-    <string name="kd20199"> ڪڏهن به نه </string>
-    <string name="kd20177"> اڃا تائين صرف ماءُ جي کير تي آهي </string>
-    <string name="kd202"> توهان کي ڪيئن خبر پئي ته توهان جي ٻارپيٽ ڀري کير پيتو آهي؟ </string>
-    <string name="kd202a"> ٻار کير پي سمي پيو هو </string>
-    <string name="kd202b"> ٻار کير پيئڻ کان پوءِ پيشاب ڪيو هو </string>
-    <string name="kd202c"> ٻار جي وزن ۾ اضافو ٿيو هو </string>
-    <string name="kd202d"> ٻار کي کير پيارڻ کان پوءِ ڇاتي مان کير وهي رهيو هو </string>
-    <string name="kd202e"> ٻار کي کير پيارڻ کان پوءِ ڇاتي نرم ٿي وئي هئي </string>
-    <string name="kd203"> ڇا توهان ٻار کي کير پيارڻ کان پهرين پاڻي کير يا ٻيو ڪجھ وٺندا آهيو؟ </string>
-    <string name="kd204"> جيڪڏهن ها ته ڇا وٺندا آهيو؟ </string>
-    <string name="kd204a"> پاڻي </string>
-    <string name="kd204b"> کير </string>
-    <string name="kd204c"> زيرو </string>
-    <string name="kd204d"> سڪو ميوو </string>
-    <string name="kd204e"> گيھ </string>
-    <string name="kd204f"> ڀوري کنڊ </string>
-    <string name="kd204g"> ڦلا </string>
-    <string name="kd3heading"> گڏيل خوراڪ </string>
-    <string name="kd301">
+    <string name="kbdbheading">پيدائش کان پوءِ هڪ دم ٻار کي کير پيارڻ </string>
+    <string name="kbdb01">ٻار جي ڄمڻ کان هڪدم پوءِ توهان ٻار کي ڇا ڏنو؟</string>
+    <string name="kbdb01a">ٿڃ</string>
+    <string name="kbdb01b">گھٽي</string>
+    <string name="kbdb01c">ماکي</string>
+    <string name="kbdb01d">گرائپ واٽر</string>
+    <string name="kbdb01e">ٻڪري جو کير</string>
+    <string name="kbdb02">ڇا توهان ٻار کي ڄمڻ کان پوءِ پنهنجو پهريون گھاٽو کير پياريو هيو؟</string>
+    <string name="kbdb03">جيڪڏهن نه ته ان جي ڪهڙي وجه هئي؟</string>
+    <string name="kbdb03a">خراب کير</string>
+    <string name="kbdb03b">ٻار جي بيمار ٿيڻ جو خطرو</string>
+    <string name="kbdb03c">گھاٽو هيو</string>
+    <string name="kbdb03d">کڙ</string>
+    <string name="kbdb04">توهان پنهنجي ٻار کي پهريون ڀيرو ڪڏهن کير ڏنو؟</string>
+    <string name="kbdb04a">ڄمڻ کان هڪدم پوءِ</string>
+    <string name="kbdb04b">ڄمڻ کان هڪ ڪلاڪ جي اندر</string>
+    <string name="kbdb04c">ڄمڻ جي1 ڪلاڪ کان 6 ڪلاڪن جي اندر</string>
+    <string name="kbdb04d">6 ڪلاڪن کان مٿي پر 24 ڪلاڪن کان گھٽ وقت ۾</string>
+    <string name="kbdb04e">ڄمڻ جي 24 ڪلاڪ يا ان کان پوءِ</string>
+    <string name="kbdb05">جيڪڏهن 24 ڪلاڪن يا ان کان وڌيڪ ٽائيم کان پوءِ کير پياريو ته ان جي ڪهڙي وجه هئي؟</string>
+    <string name="kbdb05a"> سائز ۾ ننڍو هو/ ٻار ڪمزور هو</string>
+    <string name="kbdb05b">ٻار کير پيئڻ جي قابل نه هو</string>
+    <string name="kbdb05c">مونکي ان وقت کير نه آيو هو</string>
+    <string name="kbdb05d"> بيمار هئيس/آئون ان وقت ڪمزور</string>
+    <string name="kbdb05e">منهنجي سس ان وقت اجازت نه ڏني هئي</string>
+
+    <string name="kbdcheading"> ماءَ جي ٿڃ پيارڻ جي باري ۾ معلومات </string>
+    <string name="kbdc01"> ڇا توهان جو ٻار اڃا تائين ٿڄ پئي ٿو؟ </string>
+    <string name="kbdc02"> ڇا ٻار کي کير پنهنجي ڇاتي سان لڳائي پياريو هيو؟</string>
+
+    <string name="kbdc03"> جيڪڏهن نه ته ڪهڙي طريقي سان پياريو هيو؟</string>
+
+    <string name="kbdc03a"> ڪپ ۽ چمچي سان </string>
+    <string name="kbdc03b"> بوتل سان </string>
+    <string name="kbdc03c">سوراخن وارو ڪپ </string>
+    <string name="kbdc04sub1">NEONATAL CAUSE </string>
+    <string name="kbdc04sub2">MATERNAT CAUSE</string>
+    <string name="kbdc04">
+    جيڪڏهن ٻيو طريقو اختيار ڪندا آهيو ته ڇو ڪندا آهيو؟ </string>
+    <string name="kbdc04a"> ٻار گھٽ وزن جو هيو </string>
+    <string name="kbdc04b"> ٻار ننڍو هيو </string>
+    <string name="kbdc04c"> ٻار بيمار هيو </string>
+    <string name="kbdc04d"> ٻار ٿڃ وٺڻ جي قابل نه هيو </string>
+    <string name="kbdc04e"> ٻار آڪسيجن تي هو </string>
+    <string name="kbdc04f"> ڊاڪٽر اجازت نه ڏني </string>
+    <string name="kbdc04g"> چپ وڍيل تارون ڪٽيل هيو</string>
+    <string name="kbdc04h"> آئو بيمار هئيس </string>
+    <string name="kbdc04i"> نپل ڏريل هيا</string>
+    <string name="kbdc04j">ڇاتي تي سوڄ هئي</string>
+    <string name="kbdc04k"> نپل جو صحيح سان ٻاهر نڪتل نه هجڻ</string>
+
+    <string name="kbddheading">صرف ۽ صرف ماءَ جي ٿڃ </string>
+    <string name="kbdd01"> ڪيترا مهينا توهان پنهنجي ٻار کي صرف پنهنجي ٿڄ پياري؟ صرف ٿڄ معنيٰ پنهنجو کير (دوائون سميت) </string>
+    <string name="kbdd01a"> ڏينهن </string>
+    <string name="kbdd01b"> مهينا </string>
+    <string name="kbdd0199"> ڪڏهن به نه </string>
+    <string name="kbdd0177"> اڃا تائين صرف ماءُ جي کير تي آهي </string>
+    <string name="kbdd02"> توهان کي ڪيئن خبر پئي ته توهان جي ٻارپيٽ ڀري کير پيتو آهي؟ </string>
+    <string name="kbdd02a"> ٻار کير پي سمي پيو هو </string>
+    <string name="kbdd02b"> ٻار کير پيئڻ کان پوءِ پيشاب ڪيو هو </string>
+    <string name="kbdd02c"> ٻار جي وزن ۾ اضافو ٿيو هو </string>
+    <string name="kbdd02d"> ٻار کي کير پيارڻ کان پوءِ ڇاتي مان کير وهي رهيو هو </string>
+    <string name="kbdd02e"> ٻار کي کير پيارڻ کان پوءِ ڇاتي نرم ٿي وئي هئي </string>
+    <string name="kbdd03"> ڇا توهان ٻار کي کير پيارڻ کان پهرين کائيندا پيئندا آهيو؟ </string>
+    <string name="kbdd04"> جيڪڏهن ها ته ڇا وٺندا آهيو؟ </string>
+    <string name="kbdd04a"> پاڻي </string>
+    <string name="kbdd04b"> کير </string>
+    <string name="kbdd04c"> زيرو </string>
+    <string name="kbdd04d"> سڪو ميوو </string>
+    <string name="kbdd04e"> گيھ </string>
+    <string name="kbdd04f"> ڀوري کنڊ </string>
+    <string name="kbdd04g"> ڦلا </string>
+    <string name="kbdeheading"> گڏيل خوراڪ </string>
+    <string name="kbde01">
     توهان پنهنجي ٻار کي ڪيتري عمر ۾پنهنجي کير کان علاوه چانھ جوس يا ٻيو ڪجھ ڏيندا آهيو؟
     </string>
-    <string name="kd301d"> شروع نه ڪيو </string>
-    <string name="kd302"> ڪهڙي پاڻياٺ ڏيندا آهيو؟ پڇو ٻئي ڪا شيءِ </string>
-    <string name="kd302a"> ماءُ جو کير (ماءُ جي کير کان علاوه) </string>
-    <string name="kd302b"> سادو پاڻي </string>
-    <string name="kd302c"> کنڊ يا گلوڪوس وارو پاڻي </string>
-    <string name="kd302d"> گرائپ واٽر </string>
-    <string name="kd302e"> کنڊ،لوڻ وارو پاڻي </string>
-    <string name="kd302f"> ميون جو جوس </string>
-    <string name="kd302g"> نون ڃاول ٻارن جو فارمولو پيڪ </string>
-    <string name="kd302h"> ديسي هربل دوائون / چانھ </string>
-    <string name="kd302i"> ماکي ۽ پاڻي </string>
-    <string name="kd302j"> پيئڻ لاءِ ڪجھ به نه ڏنو هو </string>
-    <string name="kd303"> جيڪڏهن دٻي جو کير پياريندا آهيو ته ان کير جي
+    <string name="kbde01d"> شروع نه ڪيو </string>
+    <string name="kbde02"> ڪهڙي پاڻياٺ ڏيندا آهيو؟ پڇو ٻئي ڪا شيءِ </string>
+    <string name="kbde02a"> ماءُ جو کير (ماءُ جي کير کان علاوه) </string>
+    <string name="kbde02b"> سادو پاڻي </string>
+    <string name="kbde02c"> کنڊ يا گلوڪوس وارو پاڻي </string>
+    <string name="kbde02d"> گرائپ واٽر </string>
+    <string name="kbde02e"> کنڊ،لوڻ وارو پاڻي </string>
+    <string name="kbde02f"> ميون جو جوس </string>
+    <string name="kbde02g"> نون ڃاول ٻارن جو فارمولو پيڪ </string>
+    <string name="kbde02h"> ديسي هربل دوائون / چانھ </string>
+    <string name="kbde02i"> ماکي ۽ پاڻي </string>
+    <string name="kbde02j"> پيئڻ لاءِ ڪجھ به نه ڏنو هو </string>
+    <string name="kbde03"> جيڪڏهن دٻي جو کير پياريندا آهيو ته ان کير جي
     صلاح توهان کي ڪنهن ڏني؟ </string>
-    <string name="kd303a"> ڊاڪٽر </string>
-    <string name="kd303b"> دوائون ڏيڻ وارو </string>
-    <string name="kd303c"> مائيٽ </string>
-    <string name="kd304"> ڪيتري عمر ۾ توهان پنهنجي ٻار کي مٿان جي
+    <string name="kbde03a"> ڊاڪٽر </string>
+    <string name="kbde03b"> دوائون ڏيڻ وارو </string>
+    <string name="kbde03c"> مائيٽ </string>
+    <string name="kbde04"> ڪيتري عمر ۾ توهان پنهنجي ٻار کي مٿان جي
     خوراڪ شروع ڪئي؟ </string>
-    <string name="kd304d"> شروع نه ڪيو </string>
-    <string name="kd305"> جيڪڏهن خوراڪ 6 مهينن کان اڳ شروع ڪئي ته
+    <string name="kbde04d"> شروع نه ڪيو </string>
+    <string name="kbde05"> جيڪڏهن خوراڪ 6 مهينن کان اڳ شروع ڪئي ته
     ڇو هن عمر ۾ شروع ڪئي؟ </string>
-    <string name="kd305a"> ماءُ جو کير ڪافي نه هو </string>
-    <string name="kd305b"> ٻار جو وزن وڌائڻ لاءِ </string>
-    <string name="kd305c"> ٻار ڪمزور هو ۽ ان جو وزن وڌي نه رهيو هو </string>
-    <string name="kd305d"> ٻار جو پيدائش وقت وزن گھٽ هيو </string>
-    <string name="kd305e">سس / گھر جي ميمبر مشورو ڏنو </string>
-    <string name="kd305f"> ڊاڪٽر مشورو ڏنو </string>
-    <string name="kd305g"> ليڊي هيلٿ ورڪر مشورو ڏنو </string>
+    <string name="kbde05a"> ماءُ جو کير ڪافي نه هو </string>
+    <string name="kbde05b"> ٻار جو وزن وڌائڻ لاءِ </string>
+    <string name="kbde05c"> ٻار ڪمزور هو ۽ ان جو وزن وڌي نه رهيو هو </string>
+    <string name="kbde05d"> ٻار جو پيدائش وقت وزن گھٽ هيو </string>
+    <string name="kbde05e">سس / گھر جي ميمبر مشورو ڏنو </string>
+    <string name="kbde05f"> ڊاڪٽر مشورو ڏنو </string>
+    <string name="kbde05g"> ليڊي هيلٿ ورڪر مشورو ڏنو </string>
     <string name="kfheading"> نون ڄاول ٻارن جي مرڻ جي باري ۾ معلومات </string>
-  
+
 
     <string name="keheading"> والدين (پيءُ) جي معلومات</string>
 
