Fixed Section A issues and fixed section B3.2, B3.3 activities save drafts! Also revert IP to server IP address

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <!--      CBT Vars       !-->
 
     <string name="endForm">اختتام</string>
-    <string name="section_A">  Module A: SOCIO DEMOGRAPHIC INFORMATION (KMC-2018-2020) </string>
+    <string name="section_A"> سماجي ڊيموگرافڪ معلومات</string>
     <string name="cra01">ڇا جواب ڏيندڙ تحقيق ۾ حصو وٺڻ لاءِ تيار آهي</string>
     <string name="crataluka">تعلقه جو نالو</string>
     <string name="cruc">يونين ڪائونسل جو نالو</string>
